custom components y firebase update

--- a/src/app/shared/components/custom-input/custom-input.component.html
+++ b/src/app/shared/components/custom-input/custom-input.component.html
@@ -5,6 +5,12 @@
     [name]="icon"
     [color]="iconColor"
   ></ion-icon>
+  <i
+    *ngIf="faIcon"
+    slot="start"
+    [class]="faIcon"
+    [style]="'color:'+faColor+'; font-size: x-large'"
+  ></i>
   <ion-input
     [type]="type"
     [autocomplete]="autocomplete"
