--- a/src/app/shared/components/custom-select/custom-select.component.scss
+++ b/src/app/shared/components/custom-select/custom-select.component.scss
@@ -35,6 +35,7 @@ ion-picker {
   --background: transparent;
   --highlight-background: var(--ion-color-secondary);
   --highlight-border-radius: 48px;
+  --fade-background-rgb: transparent;
 }
 
 ion-picker-column-option {
