--- a/src/app/shared/components/custom-datetime-picker/custom-datetime-picker.component.html
+++ b/src/app/shared/components/custom-datetime-picker/custom-datetime-picker.component.html
@@ -1,12 +1,92 @@
-<ion-item #item [ngClass]="class" class="item" lines="none" id="open-date-picker">
+<!-- <ion-item
+  #item
+  [ngClass]="class"
+  class="item"
+  lines="none"
+  id="open-date-picker"
+>
   <ion-icon slot="start" name="calendar-outline" [color]="iconColor"></ion-icon>
-  <ion-input *ngIf="!datetime" readonly="true" type="text" [label]="label" labelPlacement="floating" color="primary"></ion-input>
-  <ion-input *ngIf="datetime" readonly="true" type="text" [label]="label" value="{{formattedDate}}" labelPlacement="floating"></ion-input>
-  <ion-label *ngIf="birthday && age > 1" [color]="iconColor" slot="end">{{age}} años</ion-label>
-</ion-item>
-<div class="errors" *ngIf="errors">Lo siento debes tener 7 años o más
+  <ion-input
+    *ngIf="!datetime"
+    readonly="true"
+    type="text"
+    [label]="label"
+    labelPlacement="floating"
+    color="primary"
+  ></ion-input>
+  <ion-input
+    *ngIf="datetime"
+    readonly="true"
+    type="text"
+    [label]="label"
+    value="{{ formattedDate }}"
+    labelPlacement="floating"
+  ></ion-input>
+  <ion-label *ngIf="birthday && age > 1" [color]="iconColor" slot="end"
+    >{{ age }} años</ion-label
+  >
+  <p>{{ stringAge }}</p>
+</ion-item> -->
+<ion-list
+  #item
+  [ngClass]="class"
+  class="list"
+  lines="none"
+  id="open-date-picker"
+>
+  <ion-item>
+    <ion-icon
+      *ngIf="icon"
+      slot="start"
+      [name]="icon"
+      [color]="iconColor"
+    ></ion-icon>
+    <i
+      *ngIf="faIcon"
+      slot="start"
+      [class]="faIcon"
+      [style]="'color:'+faColor+'; font-size: x-large'"
+    ></i>
+    <ion-input
+      *ngIf="!datetime"
+      readonly="true"
+      type="text"
+      [label]="label"
+      labelPlacement="floating"
+      color="primary"
+    ></ion-input>
+    <ion-input
+      *ngIf="datetime"
+      readonly="true"
+      type="text"
+      [label]="label"
+      value="{{ formattedDate }}"
+      labelPlacement="floating"
+    ></ion-input>
+  </ion-item>
+  <ion-item *ngIf="stringAge != ''">
+    <i
+      class="fa-solid fa-user-clock"
+      slot="start"
+      [style]="'color:'+faColor+'; font-size: x-large'"
+    ></i>
+    <ion-input
+      readonly="true"
+      type="text"
+      label="Edad"
+      [value]="stringAge"
+      labelPlacement="floating"
+    ></ion-input>
+  </ion-item>
+</ion-list>
+<div class="errors" *ngIf="errors">
+  Lo siento debes tener {{ minAge }} años o más
 </div>
-<ion-modal trigger="open-date-picker" [initialBreakpoint]="1" [breakpoints]="[0, 1]">
+<ion-modal
+  trigger="open-date-picker"
+  [initialBreakpoint]="1"
+  [breakpoints]="[0, 1]"
+>
   <ng-template>
     <div class="block">
       <ion-datetime
