--- a/src/app/shared/components/custom-datetime-picker/custom-datetime-picker.component.scss
+++ b/src/app/shared/components/custom-datetime-picker/custom-datetime-picker.component.scss
@@ -1,4 +1,4 @@
-.item {
+.list {
   border-radius: 10px;
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
@@ -7,13 +7,13 @@
   margin-bottom: 10px;
 }
 
-.normal-item {
+.normal-list {
   border: 2px solid var(--ion-color-primary);
   ion-input {
     --color: var(--ion-color-primary);
   }
 }
-.error-item {
+.error-list {
   border: 2px solid var(--ion-color-danger);
   ion-input {
     --color: var(--ion-color-danger);
